Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "import numpy as np\n",
+    "v = np.array([2, ])"
    ]
   },
   {
