Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,13 +79,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 4 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# Code here \n",
     "import numpy as np\n",
-    "v = np.array([2, ])"
+    "v = np.array([2, 4, 6])\n",
+    "print(v)"
    ]
   },
   {
