Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,12 +113,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3.14159265 -2.44346095 -1.74532925 -1.04719755 -0.34906585  0.34906585\n",
+      "  1.04719755  1.74532925  2.44346095  3.14159265]\n"
+     ]
+    }
+   ],
    "source": [
     "# Code here\n",
-    "x = np.linspace(-np.pi, np.pi, 10)"
+    "x = np.linspace(-np.pi, np.pi, 10)\n",
+    "print(x)"
    ]
   },
   {
