Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -146,14 +146,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.141592653589793\n",
+      "-1.7453292519943295\n",
+      "3.141592653589793\n",
+      "2.443460952792061\n"
+     ]
+    }
+   ],
    "source": [
     "# Code here \n",
     "print(x[0])\n",
     "print(x[2])\n",
-    "print()"
+    "print(x[-1])\n",
+    "print(x[-2])"
    ]
   },
   {
