Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here \n"
+    "# Code here \n",
+    "print(x[1:4])"
    ]
   },
   {
