Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,12 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2.44346095 -1.74532925 -1.04719755]\n"
+     ]
+    }
+   ],
    "source": [
     "# Code here \n",
-    "print(x[1:4])"
+    "print(x[1:4])\n"
    ]
   },
   {
