Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,8 @@
    "source": [
     "# Code here \n",
     "print(x[1:4])\n",
-    "print(x[0:-1:2])"
+    "print(x[0:-1:2])\n",
+    "print([])"
    ]
   },
   {
