Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,8 @@
     "# Code here \n",
     "print(x[1:4])\n",
     "print(x[0:-1:2])\n",
-    "print([])"
+    "print(x[:])\n",
+    "print(x[-1:])"
    ]
   },
   {
