--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
     "print(x[1:4])\n",
     "print(x[0:-1:2])\n",
     "print(x[:])\n",
-    "print(x[-1:])"
+    "print(x[-1:0:-1])"
    ]
   },
   {
