Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,12 +242,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Code here \n",
-    "X = np.array([[1, 2, 3], [4, 5, 6]])"
+    "X = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "print(X)"
    ]
   },
   {
