Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,9 +242,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Code here \n",
     "X = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
@@ -272,7 +282,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "Y = np.mat([[1, 2, 3]])"
    ]
   },
   {
