Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
    "outputs": [],
    "source": [
     "# Code here \n",
-    "Y = np.mat([[1, 2, 3]])"
+    "Y = np.mat([[1, 2, 3], [4, 5, 6], [7, 8, ]])"
    ]
   },
   {
