Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -278,12 +278,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Code here \n",
-    "Y = np.mat([[1, 2, 3], [4, 5, 6], [7, 8, ]])"
+    "Y = np.mat([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "print(Y)"
    ]
   },
   {
