--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "print(x[0, ])"
    ]
   },
   {
