Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,9 @@
    "outputs": [],
    "source": [
     "# Code here \n",
-    "print(x[0, ])"
+    "print(X[0, 0])\n",
+    "print(X[-1, -1])\n",
+    "pritn()"
    ]
   },
   {
