Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,8 @@
     "# Code here \n",
     "print(X[0, 0])\n",
     "print(X[-1, -1])\n",
-    "pritn()"
+    "print(X[0, :])\n",
+    "print(X)"
    ]
   },
   {
