--- a/index.ipynb
+++ b/index.ipynb
@@ -320,15 +320,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "9\n",
+      "[1 2 3]\n",
+      "[1 4 7]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Code here \n",
     "print(X[0, 0])\n",
     "print(X[-1, -1])\n",
     "print(X[0, :])\n",
-    "print(X)"
+    "print(X[:, 0])\n",
+    "print(X[:])"
    ]
   },
   {
