--- a/index.ipynb
+++ b/index.ipynb
@@ -366,13 +366,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11  2  3]\n",
+      " [12  5  6]\n",
+      " [13  8 15]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Code here \n",
     "X[:, 0] = [11, 12, 13]\n",
-    "X[]"
+    "X[2, 2] = 15\n",
+    "print(X)"
    ]
   },
   {
