--- a/index.ipynb
+++ b/index.ipynb
@@ -388,11 +388,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11  2  3]\n",
+      " [12  5  6]\n",
+      " [16 16 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "X[2] = 1"
+    "X[2] = 16\n",
+    "print(X)"
    ]
   },
   {
