--- a/index.ipynb
+++ b/index.ipynb
@@ -407,6 +407,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X[:, 2] = 17\n",
+    "print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
