Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -408,12 +408,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11  2 17]\n",
+      " [12  5 17]\n",
+      " [16 16 17]]\n"
+     ]
+    }
+   ],
    "source": [
     "X[:, 2] = 17\n",
-    "print()"
+    "print(X)"
    ]
   },
   {
