Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -445,7 +445,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "print(x.shape)"
    ]
   },
   {
