--- a/index.ipynb
+++ b/index.ipynb
@@ -441,12 +441,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10,)\n",
+      "(3, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "# Code here \n",
-    "print(x.shape)"
+    "print(x.shape)\n",
+    "print(X.shape)"
    ]
   },
   {
