Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -502,7 +502,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "A = np.ar"
    ]
   },
   {
