--- a/index.ipynb
+++ b/index.ipynb
@@ -503,7 +503,11 @@
    "outputs": [],
    "source": [
     "# Code here \n",
-    "A = np.ar"
+    "A = np.array([\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "])\n"
    ]
   },
   {
