--- a/index.ipynb
+++ b/index.ipynb
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,9 @@
     "    [1, 2, 3],\n",
     "    [4, 5, 6],\n",
     "    [7, 8, 9]\n",
-    "])\n"
+    "])\n",
+    "A_transposed = A.T\n",
+    "A_transposed2 = np.transpose(A)"
    ]
   },
   {
