Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -509,7 +509,8 @@
     "    [7, 8, 9]\n",
     "])\n",
     "A_transposed = A.T\n",
-    "A_transposed2 = np.transpose(A)"
+    "A_transposed2 = np.transpose(A)\n",
+    "print(A, '\\n\\n')"
    ]
   },
   {
