Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -498,18 +498,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'A_tranposed' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-da6aeb54200c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mA_transposed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mA_transposed2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'\\n\\n'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA_tranposed\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'\\n\\n'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mA_transposed2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'A_tranposed' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]] \n",
+      "\n",
+      " [[1 4 7]\n",
+      " [2 5 8]\n",
+      " [3 6 9]] \n",
+      "\n",
+      " [[1 4 7]\n",
+      " [2 5 8]\n",
+      " [3 6 9]]\n"
      ]
     }
    ],
@@ -522,7 +528,7 @@
     "])\n",
     "A_transposed = A.T\n",
     "A_transposed2 = np.transpose(A)\n",
-    "print(A, '\\n\\n', A_tranposed, '\\n\\n', A_transposed2)"
+    "print(A, '\\n\\n', A_transposed, '\\n\\n', A_transposed2)"
    ]
   },
   {
